2005-06-27  Justin Garcia  <justin.garcia@apple.com>

        Patch by Anders Carlsson <andersca@mac.com>

        Reviewed by Darin.

        - Fixes <http://bugzilla.opendarwin.org/show_bug.cgi?id=3489>
        WebView's setSelectedDOMRange doesn't not implement clearing the selection as described in the WebView documentation:
        <http://developer.apple.com/documentation/Cocoa/Reference/WebKit/ObjC_classic/Classes/WebView.html>
	
        * WebView.subproj/WebView.m:
        (-[WebView setSelectedDOMRange:affinity:]):
        If range is nil, call deselectText.

2005-06-24  Justin Garcia  <justin.garcia@apple.com>

        Patch contributed by Duncan Wilcox <duncan@mclink.it>

        Reviewed by Darin

        - Fixed <http://bugzilla.opendarwin.org/show_bug.cgi?id=3535>
            Spelling suggestions in the context menu don't call the should* delegate methods

        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView _changeSpellingFromMenu:]):
        give delegate's webView:shouldInsertText:replacingDOMRange:givenAction: a chance
        to prevent replacing of selected text

2005-06-22  John Sullivan  <sullivan@apple.com>

        Reviewed by Chris Blumenberg.
        
        - fixed <rdar://problem/3764645> please add a way to allow WebKit clients to override the WebPDFView context menu

        * PublicHeaderChangesFromTiger.txt: Added.
        New file to keep track of changes made to public headers that haven't been through API review yet.
        Initially lists the WebMenuItem enum tags added to WebUIDelegate.h as part of this change.
        
        * WebView.subproj/WebDefaultContextMenuDelegate.m:
        (-[WebDefaultUIDelegate appendDefaultItems:toArray:]):
        new method, handles initial separator
        (-[WebDefaultUIDelegate contextMenuItemsForElement:defaultMenuItems:]):
        now has defaultMenuItems: parameter. Any menu items in this array are appended at the end of
        the standard set.